Use ".removeLast()"